[SQUASH] PixelPropsUtils: Multiple updates
AttestationHooks: Bring back Netflix spoof

PixelPropsUtils: Add support for Asphalt 9

PixelPropsUtils: Use OP 8 PRO for Mobile legends

Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

PixelPropsUtils: Spoof ROG Phone 3 for FIFA Mobile

Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

PixelPropsUtils: Allow Spoofing of Pixel 7 Pro for Pixel devices

* older pixel models may still get some benefits in spoofing p7p e.g pixel 3-4 series

Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

PixelPropsUtils: Get package name from context instead of app

11-04 08:48:39.039 11637 11637 E AndroidRuntime: FATAL EXCEPTION: main
11-04 08:48:39.039 11637 11637 E AndroidRuntime: Process: com.NextFloor.DestinyChild, PID: 11637
11-04 08:48:39.039 11637 11637 E AndroidRuntime: java.lang.RuntimeException: Unable to get provider androidx.startup.InitializationProvider: androidx.startup.StartupException: android.content.pm.PackageManager$NameNotFoundException: ComponentInfo{/androidx.startup.InitializationProvider}
11-04 08:48:39.039 11637 11637 E AndroidRuntime:   at android.app.ActivityThread.installProvider(ActivityThread.java:7488)

Change-Id: Icb12f938fe0fca710f8f9d29182d0134ba3c63eb
[ghostrider-reborn: adapt to PIHooks]
[Stallix: adapt to AttestationHooks as well]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

PixelPropsUtils: Update fingerprints to May 2023 release

PixelPropsUtils: Update supported pixel code names

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

PixelPropsUtils: Introduce ROG Phone 6

Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

Revert "PixelPropsUtils: Spoof Pixel 7 Pro to some Google apps"

This reverts commit d7537f2.

Change-Id: I52cde6d33ee02eee27247e980acad883229298f9

Co-authored-by: Golbinex <62813600+Golbinex@users.noreply.github.com>
Co-authored-by: minaripenguin <minaripenguin@users.noreply.github.com>
Co-authored-by: Richard Raya <rdxzv.dev